# sino_chess

./: .clang-format  .gitignore  CMakeLists.txt  Podfile  README.md  app.qrc  sino_chess.pro
CSFinance/: AppDelegate.h  AppDelegate.m  CSPrefixHeader.pch  FirstViewController.h  FirstViewController.m  Info.plist  SecondViewController.h  SecondViewController.m  XWFeedLayout.h  XWFeedLayout.m  main.m
CSFinance.xcodeproj/: project.pbxproj
CSFinance.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
CSFinance.xcworkspace/: contents.xcworkspacedata
CSFinance.xcworkspace/xcuserdata/csco.xcuserdatad/: UserInterfaceState.xcuserstate
CSFinance.xcworkspace/xcuserdata/viviwu.xcuserdatad/: UserInterfaceState.xcuserstate
CSFinance/Assets.xcassets/AppIcon.appiconset/: Contents.json
CSFinance/Base.lproj/: Main.storyboard
CSFinance/Cell/: CSImgCollectCell.h  CSImgCollectCell.m  XWCollectionReusableView.h  XWCollectionReusableView.m  XWCollectionView.h  XWCollectionView.m  XWCollectionViewCell.h  XWCollectionViewCell.m  XWCollectionViewCell.xib
CSFinance/CellLayoutModel/: XWItemLayout.h  XWItemLayout.m  XWTableCollectCell.h  XWTableCollectCell.m  XWTableHeader.h  XWTableHeader.m
CSFinance/CellLayoutModel/CollectCellHeader/: XWCollectionRightCell.h  XWImageRightDetailCell.m  XWImageSubtitleCell.m  XWImageSubtitleCell.xib  XWImageTitleCell.h
CSFinance/CellLayoutModel/Table/: XWTableChartCell.h  XWTableChartCell.m  XWTableGroupHeader.h  XWTableGroupHeader.m  XWTableHeader.h  XWTableHeader.m  XWTableViewCell.h  XWTableViewCell.m  XWTrendTableCell.h  XWTrendTableCell.m
CSFinance/CellLayoutModel/collect/: CSImgCollectCell.m  XWCollectionGroupHeader.h  XWCollectionGroupHeader.m  XWCollectionReusableView.h  XWCollectionViewCell.h  XWCollectionViewCell.m  XWImageTitleCell.h  XWImageTitleCell.m
CSFinance/Institution/: FundManagersTableController.h  FundManagersTableController.m  FundRackTableController.h  FundRackTableController.m  OfficialStatusViewController.h  OfficialStatusViewController.m  PPManagerViewController.h  PPManagerViewController.m  Shop.storyboard  ShopOverviewTableController.h  ShopOverviewTableController.m
CSFinance/Interact/: Interact.storyboard  InteractMainViewController.h  InteractMainViewController.m
CSFinance/Interact/Cell/: XWImageRightDetailCell.h  XWImageRightDetailCell.xib  XWImageSubtitleCell.h  XWImageSubtitleCell.m  XWImageSubtitleCell.xib
CSFinance/Interact/CollectCellHeader/: XWCollectLabelCell.h  XWCollectLabelCell.m  XWCollectLabelCell.xib  XWCollectionRightCell.m  XWCollectionRightCell.xib  XWImageRightDetailCell.xib  XWImageSubtitleCell.h  XWImageSubtitleCell.m  XWImageSubtitleCell.xib  XWImageTitleCell.h  XWImageTitleCell.m  XWImageTitleCell.xib
CSFinance/Interact/Composite/: CompositeTableController.h  CompositeTableController.m  MutiPlayerViewController.h  (+3 more)
CSFinance/PrivatePlacement/: PPFundsRankTableViewController.h  PPFundsRankTableViewController.m  PPRank.storyboard  XWRankViewController.h  XWRankViewController.m
CSFinance/TableViewCellHeader/: XWTableSubtitleCell.h  XWTableSubtitleCell.m  XWTableSubtitleCell.xib
CSFinanceTests/: CSFinanceTests.m
CSFinanceUITests/: CSFinanceUITests.m
Resource/: hotShow.json
Resource/DataAPI/: weibo_7.json
Universal/Category/: UIView+CS.h  UIView+CS.m  UIViewController+CS.h  UIViewController+CS.m
Universal/QRCode/: KSYQRCode.h  KSYQRCodeVC.m
Universal/TOWebViewController/: TOWebViewController.m
Universal/XWButton/: UIButton+Bootstrap.h  UIButton+Bootstrap.m
Universal/XWFilterView/: XWFilterCell.h  XWFilterCell.m  XWFilterView.h  XWFilterView.m
Universal/XWScrollBanner/: XWBanner.h  XWBanner.m  XWScrollBanner.h  XWScrollBanner.m
Universal/XWSegmentControl/: XWSegmentControl.h  XWSegmentControl.m  XWSegmentedControl.h  XWSegmentedControl.m
code/: AboutAuthor.cpp  AboutAuthor.h  AboutAuthor.ui  ChessBoard.cpp  ChessBoard.h  ChessPieces.cpp  ChessPieces.h  ChessStep.cpp  ChessStep.h  ChessVoice.cpp  ChessVoice.h  ChooseMainWindow.cpp  MachineGame.cpp  MachineGame.h  NetworkGame.cpp  NetworkGame.h  main.cpp  mode_selector.cpp  mode_selector.h
(+163 files in other folders)
